// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CProgressBar renders correctly 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="progress-bar"
  role="progressbar"
  style="width: 0%;"
>
  
</div>
`;

exports[`CProgressBar renders correctly 2`] = `
<div
  aria-valuemax="200"
  aria-valuemin="0"
  aria-valuenow="50"
  class="progress-bar bg-success progress-bar-striped"
  role="progressbar"
  style="width: 25%;"
>
  234
</div>
`;
